# canary-mlx

./: .agent.md  .gitattributes  .gitignore  .pylintrc  CLAUDE.md  Canary 1B Flash Conversion_.md  MLX_PRECEDENT_ANALYSIS.md  README.md  README_CANARY_CONVERSION.md  VERIFICATION_REPORT.md  architecture-comparison.md  canary-nemo-to-mlx.py  canary_to_mlx_converter.py  main.py  mypy.ini  nemo_to_mlx.py  pyproject.toml  setup_canary_conversion.py  test_canary_conversion.py  todo-enhanced.md  todo.md
.claude/: settings.local.json
canary-180m-flash/: .gitattributes  README.md  canary-180m-flash.nemo
canary-180m-flash-mlx/: config.json  model.safetensors
canary-1b/: .gitattributes  README.md
canary-1b-flash/: .gitattributes  README.md
canary-example/: proposal.md
canary-example/canary-code/: README.md  READMExx.md  canary.py  convert_canary.py  decoder.py  pyproject.toml
canary-example/canary-code/mlx_canary/: decoding.py
canary-example/canary-code/mlx_canary/copy-whisper/: load_models.py
mlx-examples/bert/: model.py  test.py
mlx-examples/clip/: clip.py  convert.py  hf_preproc.py  image_processor.py  linear_probe.py  model.py  test.py  tokenizer.py
mlx-examples/cvae/: README.md  main.py
mlx-examples/encodec/: README.md  convert.py  encodec.py  example.py  test.py
mlx-examples/encodec/benchmarks/: bench_mx.py
mlx-examples/flux/: dreambooth.py  generate_interactive.py  txt2image.py
mlx-examples/flux/flux/: autoencoder.py  clip.py  datasets.py  flux.py  layers.py  model.py  t5.py  tokenizers.py  utils.py
mlx-examples/gcn/: datasets.py  gcn.py  main.py
mlx-examples/llava/: generate.py  language.py  llava.py  test.py  vision.py
mlx-examples/llms/gguf_llm/: generate.py  models.py
mlx-examples/llms/llama/: convert.py  llama.py
mlx-examples/llms/mistral/: convert.py  mistral.py  test.py
mlx-examples/llms/mixtral/: mixtral.py
mlx-examples/llms/speculative_decoding/: decoder.py  model.py
mlx-examples/lora/: convert.py  fuse.py  lora.py  models.py  utils.py
mlx-examples/lora/data/: wikisql.py
mlx-examples/mnist/: main.py
mlx-examples/musicgen/: generate.py  musicgen.py
mlx-examples/normalizing_flow/: bijectors.py  flows.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/: CODE_CHANGES.md  README.md
mlx-examples/pr483_lora_for_whisper_speech_transcription/bert/: model.py  test.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/cifar/: dataset.py  main.py  resnet.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/gcn/: main.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/llms/: setup.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/llms/llama/: convert.py  llama.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/llms/mistral/: convert.py  mistral.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/llms/mixtral/: mixtral.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/llms/mlx_lm/: convert.py  generate.py  utils.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/llms/phixtral/: generate.py  phixtral.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/llms/qwen/: qwen.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/llms/speculative_decoding/: decoder.py  model.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/lora/: fuse.py  lora.py  models.py  utils.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/mnist/: jax_main.py  main.py  torch_main.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/normalizing_flow/: distributions.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/speechcommands/: kwt.py  main.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/stable_diffusion/: image2image.py  txt2image.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/stable_diffusion/stable_diffusion/: __init__.py  config.py  model_io.py  sampler.py  unet.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/t5/: hf_t5.py  t5.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/transformer_lm/: datasets.py  jax_main.py  main.py  tf_main.py  torch_main.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/whisper/: benchmark.py  convert.py  test.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/whisper/lora/: fuse.py  lora.py  utils.py
mlx-examples/pr483_lora_for_whisper_speech_transcription/whisper/whisper/: audio.py  decoding.py  load_models.py  timing.py  transcribe.py  whisper.py
mlx-examples/segment_anything/: convert.py  main.py
mlx-examples/segment_anything/notebooks/: automatic_mask_generator_example.ipynb  predictor_example.ipynb
mlx-examples/segment_anything/segment_anything/: automatic_mask_generator.py  common.py  image_encoder.py  mask_decoder.py  predictor.py  prompt_encoder.py  sam.py  transformer.py
mlx-examples/speechcommands/: main.py
mlx-examples/stable_diffusion/: image2image.py  txt2image.py
mlx-examples/stable_diffusion/stable_diffusion/: __init__.py  clip.py  config.py  model_io.py  sampler.py  tokenizer.py  unet.py  vae.py
mlx-examples/t5/: t5.py
mlx-examples/transformer_lm/: datasets.py  main.py
mlx-examples/whisper/: convert.py  test.py
mlx-examples/whisper/mlx_whisper/: audio.py  cli.py  decoding.py  load_models.py  timing.py  tokenizer.py  torch_whisper.py  transcribe.py  whisper.py  writers.py
mlx-examples/wwdc25/: Explore_language_models_on_Apple_silicon_with_MLX.ipynb  Get_started_with_MLX_for_Apple_silicon.ipynb
parakeet-example/parakeet-mlx-code/: pyproject.toml
parakeet-example/parakeet-mlx-code/parakeet_mlx/: __init__.py  alignment.py  attention.py  audio.py  cache.py  cli.py  conformer.py  ctc.py  parakeet.py  rnnt.py  tokenizer.py
parakeet-mlx/: pyproject.toml
parakeet-mlx/parakeet_mlx/: __init__.py  canary.py  transformer.py
parakeet-tdt-0.6b-v2/: .gitattributes  README.md
parakeet-tdt-0.6b-v2-mlx/: README.md  config.json  tokenizer.model  tokenizer.vocab  vocab.txt
test-transcription/: LJ001-0001_20250627_105723.srt
(+3 files in other folders)
