[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canary-mlx"
version = "0.1.0"
description = "An implementation of the Nvidia's Canary models for Apple Silicon using MLX."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dacite>=1.9.2",
    "huggingface-hub>=0.33.1",
    "librosa>=0.11.0",
    "mlx>=0.26.1",
    "numpy>=2.3.1",
    "typer>=0.16.0",
]
license = "Apache-2.0"
keywords = [
    "mlx",
    "canary",
    "asr",
    "nvidia",
    "apple",
    "speech",
    "recognition",
    "ml",
]

[project.urls]
Repository = "https://github.com/chikingsley/canary-mlx.git"
Issues = "https://github.com/chikingsley/canary-mlx/issues"

[project.scripts]
canary-mlx = "canary_mlx.cli:app"
