[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parakeet-mlx"
version = "0.3.1"
description = "An implementation of the Nvidia's Parakeet models for Apple Silicon using MLX."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dacite>=1.9.2",
    "huggingface-hub>=0.30.2",
    "librosa>=0.11.0",
    "mlx>=0.22.1",
    "mypy>=1.16.1",
    "numpy>=2.2.5",
    "typer>=0.15.3",
]
license = "Apache-2.0"
keywords = [
    "mlx",
    "parakeet",
    "asr",
    "nvidia",
    "apple",
    "speech",
    "recognition",
    "ml",
]

[project.urls]
Repository = "https://github.com/senstella/parakeet-mlx.git"
Issues = "https://github.com/senstella/parakeet-mlx/issues"

[project.scripts]
parakeet-mlx = "parakeet_mlx.cli:app"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
